<!--
  ~ Copyright (c) 2019 Mohamed Alaa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<resources>
    <string name="open_source_licences">Open Source Licences</string>

    <string name="search">Search</string>
    <string name="type_here_3_dots">Type here…</string>
    <string name="match_case">Match Case</string>
    <string name="any_letter">Any Letter</string>
    <string name="author">Author</string>

    <string name="mautils_author">Mohamed Alaa</string>
    <string name="link">Link</string>
    <string name="by">By</string>
    <string name="licence">Licence</string>

    <string name="var_colon_var">%1$s : %2$s</string>
    <string name="no_licenses_found">No Licenses Found</string>
</resources>
