<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Mohamed Alaa
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and limitations under the License.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mautils="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="mohamedalaa.mautils.core_android.extensions.ContextUtils"/>
        <import type="mohamedalaa.open_source_licences.R"/>

        <variable
            name="itemBackground"
            type="android.graphics.drawable.Drawable" />
        <variable
            name="model"
            type="mohamedalaa.open_source_licences.model.OpenSourceLicencesModel" />
        <variable
            name="viewModel"
            type="mohamedalaa.open_source_licences.view_model.fragments.OpenSourceLicencesFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@{itemBackground}"

        tools:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
        tools:context=".view.fragments.OpenSourceLicencesFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:title="@string/open_source_licences"
            app:titleTextColor="@{model.toolbarTitleTextColor}"

            android:background="?colorPrimary"

            mautils:toolbar_menuRes="@{R.menu.fragment_open_source_licences_toolbar}"

            mautils:toolbar_setIconsTint="@{model.toolbarIconsTint}"

            app:navigationIcon="@{ContextUtils.getDrawableFromResOrNull(context.getApplicationContext(), model.toolbarNavIconDrawableRes == null ? 0 : model.toolbarNavIconDrawableRes)}"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/chipsLinearLayout"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:orientation="horizontal"

            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            android:background="?colorPrimary"

            android:visibility="@{! viewModel.mutableLiveDataSearchViewIsIconified}"

            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/matchCaseChip"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/match_case"

                style="@style/Widget.MaterialComponents.Chip.Filter"

                tools:checked="true"
                android:checked="@={viewModel.mutableLiveDataMatchCase}"

                android:textAlignment="center"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/anyLetterChip"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/any_letter"

                style="@style/Widget.MaterialComponents.Chip.Filter"

                tools:checked="true"
                android:checked="@={viewModel.mutableLiveDataAnyLetter}"

                android:gravity="center"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/authorChip"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/author"

                style="@style/Widget.MaterialComponents.Chip.Filter"

                tools:checked="true"
                android:checked="@={viewModel.mutableLiveDataIncludeAuthor}"

                android:gravity="center"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="1dp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"

            android:layout_width="0dp"
            android:layout_height="0dp"

            android:recyclerView_layoutManager_isHorizontal="@{false}"

            android:recyclerView_maItemDecoration_dividerColor="@{model.rvItemDividerColor}"
            android:recyclerView_maItemDecoration_dividerDimenInDp="@{model.rvItemDividerThicknessInDp}"
            android:recyclerView_maItemDecoration_IgnoreBorder="@{true}"
            android:recyclerView_maItemDecoration_MergeOffsets="@{true}"
            android:recyclerView_maItemDecoration_SingleItemDivider="@{false}"

            android:clipToPadding="false"

            app:layout_constraintTop_toBottomOf="@id/chipsLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/noLicensesFoundTextView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/no_licenses_found"
            android:textSize="22sp"
            android:textColor="@android:color/black"

            android:visibility="@{viewModel.mutableLiveDataLicensesAreEmpty}"

            app:layout_constraintTop_toBottomOf="@id/chipsLinearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>